# ripcurl

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: release-plz.yml  rust.yml
docs/decisions/: 0001-retry-from-original-url-on-redirect.md  0002-exponential-backoff-with-jitter.md  0003-decode-errors-are-transient.md  0004-streaming-requires-random-access.md
src/: destination.rs  lib.rs  main.rs  source.rs  stream.rs  transfer.rs
src/protocol/: file.rs  http.rs  mod.rs
tests/: file_integration.rs  http_integration.rs  partial_write.rs  stream_tests.rs  transfer_orchestration.rs
tests/common/: mock_protocols.rs  mod.rs  test_server.rs  transfer_test.rs
tests_integration/: smoke.nu
