[package]
name = "ripcurl"
version = "0.1.0"
edition = "2024"

# TODO: Bin info

[dependencies]
bytes = "1.11.1"
futures-core = "0.3.32"
reqwest = { version = "0.13.2", features = ["stream"] }
thiserror = "2.0.18"
tokio = {version =  "1.50.0", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.44"
url = "2.5.8"
