[package]
name = "ripcurl"
version = "0.1.0"
edition = "2024"
description = "Very persistent file transfers"
license = "BSD-3-Clause"
repository = "https://github.com/stadiamaps/ripcurl"
authors = ["Ian Wagner <ian@stadiamaps.com>"]
keywords = ["cli", "curl", "download", "transfer"]
categories = ["command-line-utilities", "network-programming"]

[[bin]]
name = "ripcurl"
path = "src/main.rs"

[dependencies]
bytes = "1.11.1"
clap = { version = "4", features = ["derive"] }
futures-core = "0.3.32"
futures-util = "0.3.32"
httpdate = "1"
rand = "0.10"
reqwest = { version = "0.13.2", features = ["stream"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "time"] }
indicatif = "0.18"
tracing = "0.1.44"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5.8"

[dev-dependencies]
axum = "0.8"
tempfile = "3"
tokio = { version = "1.50.0", features = ["test-util"] }
tokio-stream = "0.1"
